--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <title>Calculator</title>
-  <link rel="stylesheet" href="./calc.css"  type="text/css">
+  <link rel="stylesheet" href="calc.css"  type="text/css">
 </head>
 
 <body>
@@ -44,7 +44,7 @@
       </div>
     </section>
   </div>
-<script src="./calc.js" type="text/javascript"></script>
+<script src="calc.js" type="text/javascript"></script>
 
  
 </body>
